# EspooLearnWords

./: .gitignore  README.md  Working Time Android  mk-openssl-webassembly.sh
ApiGenerator/ApiGenerator/: CMakeLists.txt  main.cpp  mainwindow.ui
DOKUMENTACJA/: .~lock.Dokumentacja.odt#  Dokumentacja.odt
EspooLearnWordsAndroid/: .gitignore  build.gradle  settings.gradle
EspooLearnWordsAndroid/app/: build.gradle
EspooLearnWordsQt/: AddEditDialog.qml  ContactDelegate.qml  ContactDelegateMy.qml  ContactForm.ui.qml  ContactView.qml  DebugRectangle.qml  Main.pro  Main.qml  MainTest.qml  SearchBar.qml  SectionDelegate.ui.qml  SectionScrollBar.qml  SectionScrollIndicator.qml  contactmodel.cpp  contactmodel.h  database.cpp  database.hpp  main.cpp  qml.qrc  test_model.cpp  test_model.hpp  test_model_2.cpp  test_model_2.hpp
EspooLearnWordsQt/android-sources/: AndroidManifest.xml
EspooLearnWordsQt/iot/: MessagesModel.cpp  MessagesModel.h  customtablemodel.cpp  customtablemodel.h
EspooLearnWordsQt/model/: qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.hpp
EspooLearnWordsQt/modules/: DevicesManager.cpp  DevicesManager.h  M0001.cpp  M0001.h  M0001Controller.cpp  M0001Controller.h  dataobject.cpp  dataobject.h
EspooLearnWordsQt/mqtt/: qmqtt.pri  qmqtt_client.cpp  qmqtt_client.h  qmqtt_client_p.cpp  qmqtt_client_p.h  qmqtt_frame.cpp  qmqtt_network.cpp  qmqtt_network_p.h  qmqtt_networkinterface.h  qmqtt_socketinterface.h  qmqtt_ssl_socket.cpp  qmqtt_ssl_socket_p.h  qmqtt_websocket.cpp  qmqtt_websocket_p.h  qmqtt_websocketiodevice.cpp
EspooLearnWordsQt/pages/: ButtonPage.qml  DeviceControlPage.qml  DevicesPage.qml  DictionaryPage.qml  M0001ControlPage.qml  MqttMessagesPage.qml
KIKOBricks/: Backend.cpp  Backend.hpp  BrickCommunicationWrapper.cpp  BrickCommunicationWrapper.hpp  BrickFinder.hpp  CMakeLists.txt  CodingConventions.qml  Controller.cpp  Controller.hpp  J0001Controller.cpp  J0001Controller.hpp  K0002Controller.hpp  K0004Controller.cpp  K0007Controller.hpp  MyBricksManager.cpp  MyBricksManager.hpp  PagesModel.qml  T0002Controller.cpp  T0002Controller.hpp  kiko_main.qml  main.cpp  pseudo_dns.cpp  pseudo_dns.hpp
KIKOBricks/pages/: BusyIndicatorPage.qml  DelayButtonPage.qml  EmulatorM0002Page.qml  FramePage.qml  GroupBoxPage.qml  HomePage.qml  PageIndicatorPage.qml  RadioButtonPage.qml  RangeSliderPage.qml  ScrollBarPage.qml  ScrollIndicatorPage.qml  StackViewPage.qml  SwitchPage.qml  TabBarPage.qml  TextAreaPage.qml  TumblerPage.qml  UDPTerminalPage.qml
KIKOBricks/scxml/: PseudoDNSStates.scxml
KIKOBricks/src/: ObjectCounter.hpp  global_config.hpp
M0002/SimulatorQt/B0002_Simulator/: CMakeLists.txt  Main.qml  main.cpp  tcp_client.cpp  tcp_client.hpp
M0002/SimulatorQt/B0002_Simulator/pages/: TCPTerminalPage.qml
M0002/SimulatorQt/gallery/: Application.cpp  Application.hpp  AudioInfo.cpp  AudioInfo.hpp  Backend.cpp  Backend.hpp  BrickCommunicationWrapper.cpp  BrickCommunicationWrapper.hpp  BrickFinder.cpp  CMakeLists.txt  Controller.cpp  Controller.hpp  K0002Controller.cpp  K0004Controller.hpp  K0007Controller.cpp  M0002Controller.hpp  MyBricksManager.cpp  MyBricksManager.hpp  PagesModel.qml  T0002Controller.cpp  T0002Controller.hpp  aspoo_main.qml  gallery.cpp  gallery.pro  gallery.qml  kiko_main.qml  main.cpp  main.hpp  pseudo_dns.cpp  pseudo_dns.hpp  qtquickcontrols2.conf
M0002/SimulatorQt/gallery/android/: AndroidManifest.xml
M0002/SimulatorQt/gallery/doc/src/: qtquickcontrols-gallery.qdoc
M0002/SimulatorQt/gallery/pages/: ButtonPage.qml  CheckBoxPage.qml  ComboBoxPage.qml  ConfigM0002Page.qml  DelegatePage.qml  DevicesInNetworkPage.qml  DialPage.qml  DialogPage.qml  EmulatorM0002Page.qml  HomePage.qml  MyBricksPage.qml  ProgressBarPage.qml  SliderPage.qml  SpinBoxPage.qml  SwipeViewPage.qml  TCPTerminalPage.qml  TextFieldPage.qml  ToolTipPage.qml  UDPTerminalPage.qml
M0002/SimulatorQt/gallery/pages/controls/: SButton.qml
M0002/SimulatorQt/gallery/pages/grid/: GridPage.qml
M0002/SimulatorQt/gallery/pages/grid_view/: GridViewPage.qml
M0002/SimulatorQt/gallery/pages/list_view/: B0002Delegate.qml  BrickDelegate.qml  BrickSwipe.qml  DetailsB0002.qml  DetailsT0002.qml  K0002Delegate.qml  ListViewPage.qml  NewT0002Delegate.qml  RecipesModel.qml  T0002Delegate.qml
M0002/SimulatorQt/gallery/pages/list_view/K0004/: K0004MainPage.qml
M0002/SimulatorQt/gallery/pages/list_view/K0007/: K0007MainPage.qml
M0002/SimulatorQt/gallery/pages/list_view/M0002/: M0002ControllerExt.qml  M0002MainPage.qml  M0002Swipe.qml  T0002ControllerExt.qml  T0002MainPage.qml
M0002/SimulatorQt/gallery/pages/list_view/T0002/: T0002ControllerExt.qml  T0002MainPage.qml
M0002/SimulatorQt/gallery/pages/list_view/common/: AddBrickDialog.qml  BrickInfoPage.qml  BrickTitle.qml  DataLine.qml  DialogBackground.qml  NetworkSettings.qml  RelayLine.qml  SwitchLine.qml  WarningDialog.qml
M0002/SimulatorQt/gallery/pages/my_bricks/: BrickDelegate.qml  MyBricksPage.qml  SectionDelegate.qml
M0002/SimulatorQt/gallery/scxml/: EmulatorM0002States.scxml
M0002/SimulatorQt/gallery/src/: ObjectCounter.cpp  global_config.hpp  tcp_terminal.cpp  tcp_terminal.hpp  udp_terminal.cpp  udp_terminal.hpp  wifi_info.hpp
M0002/SimulatorQt/gallery/src/controllers/: Controller.cpp  Controller.hpp  M0002Controller.cpp  M0002Controller.hpp  MyBricksManager.cpp  MyBricksManager.hpp  T0002Controller.cpp  T0002Controller.hpp  local_m0002_controller.cpp  local_m0002_controller.hpp
M0002/SimulatorQt/gallery/src/emulators/: BrickIpFinder.cpp  BrickIpFinder.hpp  ProtocolStd.cpp  ProtocolStd.h  emulator_m0002.cpp  emulator_m0002.hpp  protocol.cpp  protocol.h  pseudo_dns.cpp  pseudo_dns.hpp  tcp_connection.cpp  tcp_connection.hpp
M0002/SimulatorQt/gallery/src/tests/: PseudoDNSTest.cpp
doc/: Aspoo Bricks.odt  Dokumentacja.odt  Espoo Bricks.odt  Untitled 1.odt
firmware/BricksFirmware/: platformio.ini
firmware/KiKoBricksSample/: platformio.ini
firmware/libs/hallib/: HalLib.cpp  (+3 more)
server/flask_qml_test_client/: GridModel.qml  colorservice.js  main.qml  qml.qrc
server/flask_server/: README.md  main.py
(+237 files in other folders)
